--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
-    "test:standard": "node_modules/.bin/standard server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy"
+    "test:standard": "node_modules/.bin/standard --fix server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy",
+    "test:coverage": "node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "async": "2.5.0",
     "babel-core": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
+    "bluebird": "3.5.1",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
     "glob-promise": "3.2.0",
@@ -27,6 +29,7 @@
     "hapi": "16.6.2",
     "hapi-react-views": "9.3.0",
     "inert": "4.2.1",
+    "lodash": "4.17.4",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-markdown": "2.5.0",
@@ -35,8 +38,20 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "4.0.1",
     "nodemon": "1.12.1",
+    "nyc": "11.2.1",
     "snazzy": "7.0.0",
     "standard": "10.0.3"
+  },
+  "standard": {
+    "globals": [
+      "before",
+      "after",
+      "describe",
+      "it",
+      "expect"
+    ]
   }
 }
