--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
     "test:standard": "node_modules/.bin/standard --fix server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy",
-    "test:coverage": "node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc"
+    "test:coverage": "node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc",
+    "coverage:publish": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,8 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "4.1.2",
+    "coveralls": "3.0.0",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
     "nyc": "11.2.1",
