views react templating from plugins too

--- a/plugins/admin/plugin.yml
+++ b/plugins/admin/plugin.yml
@@ -1,6 +1,8 @@
 name: "Nova Administration"
-type: router
+description: ""
 rules:
-  method: GET
-  path: /admin/{p*}
-  handler: 'handler.js'
+    -
+      type: route
+      method: GET
+      path: "/admin/{p*}"
+      handler: "handler.js"
