--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "async": "2.5.0",
     "babel-core": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.0",
     "bluebird": "3.5.1",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
     "glob-promise": "3.2.0",
     "good": "7.3.0",
     "hapi": "16.6.2",
+    "hapi-auth-jwt2": "7.3.0",
     "hapi-react-views": "9.3.0",
     "inert": "4.2.1",
     "lodash": "4.17.4",
@@ -35,7 +37,9 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-markdown": "2.5.0",
+    "react-router": "4.2.0",
     "reflux": "6.4.1",
+    "semantic-ui-react": "0.74.2",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
   },
