--- a/plugins/admin/plugin.yml
+++ b/plugins/admin/plugin.yml
@@ -4,5 +4,10 @@ rules:
     -
       type: route
       method: GET
+      path: "/admin/assets/{p*}"
+      handler: "handler-assets.js"
+    -
+      type: route
+      method: GET
       path: "/admin/{p*}"
       handler: "handler.js"
