--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "ncu": "./node_modules/.bin/ncu",
     "start": "NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
     "test:standard": "node_modules/.bin/standard --fix server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy",
     "test:coverage": "NOVA_SERVER_PORT=9090 node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc",
@@ -43,7 +44,7 @@
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
     "reflux": "6.4.1",
-    "semantic-ui-react": "0.74.2",
+    "semantic-ui-react": "0.75.0",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
   },
@@ -51,11 +52,14 @@
     "babel-loader": "7.1.2",
     "chai": "4.1.2",
     "coveralls": "3.0.0",
+    "css-loader": "0.28.7",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
+    "npm-check-updates": "2.13.0",
     "nyc": "11.2.1",
     "snazzy": "7.0.0",
     "standard": "10.0.3",
+    "style-loader": "0.19.0",
     "webpack": "3.7.1"
   },
   "standard": {
