--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "async": "2.5.0",
     "babel-core": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "bluebird": "3.5.1",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
@@ -44,7 +44,7 @@
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
     "reflux": "6.4.1",
-    "semantic-ui-react": "0.75.0",
+    "semantic-ui-react": "0.75.1",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
   },
@@ -60,7 +60,7 @@
     "snazzy": "7.0.0",
     "standard": "10.0.3",
     "style-loader": "0.19.0",
-    "webpack": "3.7.1"
+    "webpack": "3.8.1"
   },
   "standard": {
     "globals": [
@@ -69,7 +69,8 @@
       "after",
       "describe",
       "it",
-      "expect"
+      "expect",
+      "xit"
     ]
   }
 }
