--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "scripts": {
     "ncu": "./node_modules/.bin/ncu",
-    "start": "NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
+    "start": " DEBUG=nova:* NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
     "test:standard": "node_modules/.bin/standard --fix server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy",
     "test:coverage": "NOVA_SERVER_PORT=9090 node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc",
     "coverage:publish": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "plugin-admin:start": "./node_modules/.bin/webpack --watch --colors --config=plugins/admin/webpack.config.js",
-    "plugin-admin:build": "./node_modules/.bin/webpack -p --config=plugins/admin/webpack.config.js"
+    "plugin-admin:build": "./node_modules/.bin/webpack -p --config=plugins/admin/webpack.config.js --optimize-minimize --colors"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
     "bluebird": "3.5.1",
+    "debug": "3.1.0",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
     "glob-promise": "3.2.0",
@@ -41,10 +42,12 @@
     "react": "16.0.0",
     "react-cookies": "0.1.0",
     "react-dom": "16.0.0",
+    "react-fontawesome": "1.6.1",
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
     "reflux": "6.4.1",
     "semantic-ui-react": "0.75.1",
+    "uglifyjs-webpack-plugin": "1.0.0-beta.3",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
   },
@@ -53,6 +56,8 @@
     "chai": "4.1.2",
     "coveralls": "3.0.0",
     "css-loader": "0.28.7",
+    "dotenv-webpack": "1.5.4",
+    "extract-text-webpack-plugin": "3.0.1",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
     "npm-check-updates": "2.13.0",
