--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-core": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
+    "bell": "8.8.0",
     "bluebird": "3.5.1",
+    "client-request": "2.3.0",
     "debug": "3.1.0",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
@@ -39,6 +41,7 @@
     "lodash": "4.17.4",
     "nconf": "0.8.5",
     "prop-types": "15.6.0",
+    "query-string": "5.0.0",
     "react": "16.0.0",
     "react-cookies": "0.1.0",
     "react-dom": "16.0.0",
@@ -46,8 +49,11 @@
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
     "reflux": "6.4.1",
+    "request": "2.83.0",
+    "request-promise": "4.2.2",
     "semantic-ui-react": "0.75.1",
     "uglifyjs-webpack-plugin": "1.0.0-beta.3",
+    "uuid": "3.1.0",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
   },
