admin redirect if not login

--- a/plugins/admin/plugin.yml
+++ b/plugins/admin/plugin.yml
@@ -16,7 +16,7 @@ rules:
       method:
         - GET
         - POST
-      path: "/admin/login"
+      path: "/admin/auth/login"
       handler: "server/handlers/login.js"
       config: "server/configs/login.js"
     -
