--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "4.17.4",
     "nconf": "0.8.5",
     "prop-types": "15.6.0",
-    "query-string": "5.0.0",
+    "query-string": "5.0.1",
     "react": "16.0.0",
     "react-cookies": "0.1.0",
     "react-dom": "16.0.0",
@@ -54,7 +54,7 @@
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semantic-ui-react": "0.75.1",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "uuid": "3.1.0",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
