--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bell": "8.8.0",
     "bluebird": "3.5.1",
     "catbox": "9.0.0",
+    "catbox-memcached": "1.1.1",
     "catbox-memory": "3.0.0",
     "client-request": "2.3.0",
     "debug": "3.1.0",
@@ -65,7 +66,7 @@
     "coveralls": "3.0.0",
     "css-loader": "0.28.7",
     "dotenv-webpack": "1.5.4",
-    "extract-text-webpack-plugin": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
     "npm-check-updates": "2.13.0",
