--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
+    "normalize.css": "7.0.0",
     "npm-check-updates": "2.13.0",
     "nyc": "11.2.1",
     "snazzy": "7.0.0",
