--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - npm uninstall -g npm
     - curl -o- -L https://yarnpkg.com/install.sh | bash
   override:
-    - yarn install
+    - yarn
 
 test:
   override:
