--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semantic-ui-react": "0.75.1",
-    "uglifyjs-webpack-plugin": "1.0.1",
     "uuid": "3.1.0",
     "vision": "4.1.1",
     "yamljs": "0.3.0"
@@ -72,9 +71,11 @@
     "normalize.css": "7.0.0",
     "npm-check-updates": "2.13.0",
     "nyc": "11.2.1",
+    "sinon": "4.0.2",
     "snazzy": "7.0.0",
     "standard": "10.0.3",
     "style-loader": "0.19.0",
+    "uglifyjs-webpack-plugin": "1.0.1",
     "webpack": "3.8.1"
   },
   "standard": {
