yarn remove, hapi jwt for admin after google auth

--- a/plugins/api/plugin.yml
+++ b/plugins/api/plugin.yml
@@ -15,4 +15,5 @@ rules:
     type: route
     method: POST
     path: "/api/pages"
+    config: "config.js"
     handler: "handlers/pages/create.js"
