--- a/circle.yml
+++ b/circle.yml
@@ -6,13 +6,6 @@ machine:
   services:
     - docker
 
-dependencies:
-  pre:
-    - npm uninstall -g npm
-    - curl -o- -L https://yarnpkg.com/install.sh | bash
-  override:
-    - yarn
-
 test:
   override:
     - make tests
@@ -22,4 +15,4 @@ deployment:
     branch: master
     owner: gperreymond
     commands:
-      - yarn run plugin-admin:build;
+      - npm run plugin-admin:build;
