--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "ncu": "./node_modules/.bin/ncu",
     "start": " DEBUG=nova:* NODE_ENV=development node_modules/.bin/nodemon --config nodemon.json index.js",
     "test:standard": "node_modules/.bin/standard --fix server/**/*.js src/**/*.js test/**/*.js | node_modules/.bin/snazzy",
     "test:coverage": "NOVA_SERVER_PORT=9090 node_modules/.bin/nyc --reporter=lcov --reporter=text node_modules/.bin/mocha --opts .mocharc",
@@ -28,6 +27,7 @@
     "babel-preset-env": "1.6.1",
     "bell": "8.8.0",
     "bluebird": "3.5.1",
+    "boom": "6.0.0",
     "catbox": "9.0.0",
     "catbox-memcached": "1.1.1",
     "catbox-memory": "3.0.0",
@@ -41,6 +41,7 @@
     "hapi-auth-jwt2": "7.3.0",
     "hapi-react-views": "9.3.0",
     "inert": "4.2.1",
+    "jsonwebtoken": "8.1.0",
     "lodash": "4.17.4",
     "nconf": "0.8.5",
     "normalize.css": "7.0.0",
