--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hapi-auth-jwt2": "7.3.0",
     "hapi-react-views": "9.3.0",
     "inert": "4.2.1",
+    "joi": "13.0.1",
     "jsonwebtoken": "8.1.0",
     "lodash": "4.17.4",
     "nconf": "0.8.5",
@@ -54,6 +55,7 @@
     "react-fontawesome": "1.6.1",
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
+    "react-youtube": "7.5.0",
     "reflux": "6.4.1",
     "request": "2.83.0",
     "request-promise": "4.2.2",
