--- a/plugins/api/plugin.yml
+++ b/plugins/api/plugin.yml
@@ -15,5 +15,5 @@ rules:
     type: route
     method: POST
     path: "/api/pages"
-    config: "config.js"
-    handler: "handlers/pages/create.js"
+    handler: "handlers/pages/create/handler.js"
+    config: "handlers/pages/create/config.js"
