--- a/package.json
+++ b/package.json
@@ -40,12 +40,11 @@
     "good": "7.3.0",
     "hapi": "16.6.2",
     "hapi-auth-jwt2": "7.3.0",
-    "hapi-react-views": "9.3.0",
     "inert": "4.2.1",
     "joi": "13.0.1",
     "jsonwebtoken": "8.1.0",
     "lodash": "4.17.4",
-    "nconf": "0.8.5",
+    "nconf": "0.9.1",
     "normalize.css": "7.0.0",
     "prop-types": "15.6.0",
     "query-string": "5.0.1",
@@ -55,13 +54,16 @@
     "react-fontawesome": "1.6.1",
     "react-markdown": "2.5.0",
     "react-router-dom": "4.2.2",
-    "react-youtube": "7.5.0",
     "reflux": "6.4.1",
     "request": "2.83.0",
     "request-promise": "4.2.2",
-    "semantic-ui-react": "0.75.1",
+    "semantic-ui-react": "0.76.0",
     "uuid": "3.1.0",
     "vision": "4.1.1",
+    "vue": "2.5.3",
+    "vue-markdown": "2.2.4",
+    "vue-server-renderer": "2.5.3",
+    "vue-youtube-embed": "2.1.3",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
@@ -73,9 +75,8 @@
     "extract-text-webpack-plugin": "3.0.2",
     "mocha": "4.0.1",
     "nodemon": "1.12.1",
-    "npm-check-updates": "2.13.0",
-    "nyc": "11.2.1",
-    "sinon": "4.0.2",
+    "nyc": "11.3.0",
+    "sinon": "4.1.1",
     "snazzy": "7.0.0",
     "standard": "10.0.3",
     "style-loader": "0.19.0",
