time to vue all

--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "bell": "8.8.0",
     "bluebird": "3.5.1",
     "boom": "6.0.0",
+    "bootstrap-ui": "2.3.3",
     "catbox": "9.0.0",
     "catbox-memcached": "1.1.1",
     "catbox-memory": "3.0.0",
     "client-request": "2.3.0",
     "debug": "3.1.0",
+    "designmodo-flat-ui": "2.3.0",
     "fs-extra": "4.0.2",
     "glob": "7.1.2",
     "glob-promise": "3.3.0",
@@ -43,6 +45,7 @@
     "inert": "4.2.1",
     "joi": "13.0.1",
     "jsonwebtoken": "8.1.0",
+    "knacss": "6.1.2",
     "lodash": "4.17.4",
     "nconf": "0.9.1",
     "normalize.css": "7.0.0",
